--- a/src/app/modules/dashboard/dashboard.component.html
+++ b/src/app/modules/dashboard/dashboard.component.html
@@ -1,1 +1,16 @@
-<p>dashboard works!</p>
+<div>
+    Charts
+</div>
+
+<div>
+    <div>Line Chart</div>
+    <div>Line Chart</div>
+    <div>Line Chart</div>
+</div>
+
+<mat-divider></mat-divider>
+
+<div>
+    <div>Table</div>
+    <div>Pie Chart</div>
+</div>
