--- a/src/app/shared/components/sidebar/sidebar.component.html
+++ b/src/app/shared/components/sidebar/sidebar.component.html
@@ -1,1 +1,27 @@
-<p>sidebar works!</p>
+<mat-nav-list>
+    <div class="profile-card">
+        <div class="header">
+            <h2>Hadi's Dashboard</h2>
+        </div>
+        <img class="profile-img"
+            src="https://img.webmd.com/dtmcms/live/webmd/consumer_assets/site_images/article_thumbnails/other/cat_relaxing_on_patio_other/1800x1200_cat_relaxing_on_patio_other.jpg"
+            alt="doge" height="150" width="150">
+    </div>
+    <mat-divider></mat-divider>
+
+    <h2 matSubheader>Menu</h2>
+
+    <a mat-list-item routerLinkActive="list-item-active" routerLink="/">Dashboard</a>
+    <a mat-list-item routerLinkActive="list-item-active" routerLink="/posts">Post</a>
+    <a mat-list-item routerLinkActive="list-item-active" routerLink="/blog">Dashboard</a>
+
+    <mat-divider></mat-divider>
+
+    <h2 matSubheader>Tools</h2>
+
+    <a mat-list-item routerLinkActive="" routerLink="/contacts">
+        <mat-icon>contact_phone</mat-icon>
+        Contacts
+    </a>
+
+</mat-nav-list>
