add chart widgets & page report

--- a/src/app/modules/dashboard/dashboard.component.html
+++ b/src/app/modules/dashboard/dashboard.component.html
@@ -1,6 +1,8 @@
 <div>
-    Charts
+    <app-widget-area></app-widget-area>
 </div>
+
+<mat-divider></mat-divider>
 
 <div>
     <div>Line Chart</div>
