--- a/src/app/shared/components/sidebar/sidebar.component.html
+++ b/src/app/shared/components/sidebar/sidebar.component.html
@@ -11,9 +11,15 @@
 
     <h2 matSubheader>Menu</h2>
 
-    <a mat-list-item routerLinkActive="list-item-active" routerLink="/">Dashboard</a>
-    <a mat-list-item routerLinkActive="list-item-active" routerLink="/posts">Post</a>
-    <a mat-list-item routerLinkActive="list-item-active" routerLink="/blog">Dashboard</a>
+    <a mat-list-item routerLinkActive="list-item-active" routerLink="/">
+        <mat-icon color="primary">dashboard</mat-icon> Dashboard
+    </a>
+    <a mat-list-item routerLinkActive="list-item-active" routerLink="/posts">
+       <mat-icon color="primary">article</mat-icon> Post
+    </a>
+    <a mat-list-item routerLinkActive="list-item-active" routerLink="/report">
+        <mat-icon color="primary">library_books</mat-icon> Report
+    </a>
 
     <mat-divider></mat-divider>
 
