--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -10,7 +10,7 @@
             <ul fxLayout="row" fxLayoutGap="20px">
                 <li>
                     <button mat-icon-button>
-                        <mat-icon>settings</mat-icon>
+                        <mat-icon>calendar_today</mat-icon>
                     </button>
                 </li>
                 <li>
