--- a/src/app/modules/dashboard/dashboard.component.html
+++ b/src/app/modules/dashboard/dashboard.component.html
@@ -4,12 +4,23 @@
 
 <mat-divider></mat-divider>
 
-<div>
-    <div>Line Chart</div>
-    <div>Line Chart</div>
-    <div>Line Chart</div>
+<br/>
+
+<div fxLayout="row" fxLayoutAlign="space-beteen center" fxLayoutGap="20px" class="stats-card">
+    <mat-card fxFlex="25">
+        <app-widget-card></app-widget-card>
+    </mat-card>
+    <mat-card fxFlex="25">
+        <app-widget-card></app-widget-card>
+    </mat-card><mat-card fxFlex="25">
+        <app-widget-card></app-widget-card>
+    </mat-card>
+    <mat-card fxFlex="25">
+        <app-widget-card></app-widget-card>
+    </mat-card>
 </div>
 
+<br/>
 <mat-divider></mat-divider>
 
 <div>
