--- a/src/app/modules/dashboard/dashboard.component.html
+++ b/src/app/modules/dashboard/dashboard.component.html
@@ -6,7 +6,7 @@
 
 <br/>
 
-<div fxLayout="row" fxLayoutAlign="space-beteen center" fxLayoutGap="20px" class="stats-card">
+<div fxLayout="row" fxLayoutAlign="space-between center" fxLayoutGap="20px" class="stats-card">
     <mat-card fxFlex="25">
         <app-widget-card></app-widget-card>
     </mat-card>
