--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -1,4 +1,4 @@
-<mat-toolbar color="primary">
+<mat-toolbar color="" style="height: 120px;">
     <mat-toolbar-row>
         <button mat-icon-button (click)="toggleSideBar()">
             <mat-icon>menu</mat-icon>
@@ -15,7 +15,7 @@
                 </li>
                 <li>
                     <button mat-icon-button>
-                        <mat-icon>help_outline</mat-icon>
+                        <mat-icon>notifications_none</mat-icon>
                     </button>
                 </li>
                 <li>
